k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ci-cd-app
spec:
  type: NodePort
  selector:
    app: nginx-proxy
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
